# code-explainer-RAG-system

./: .env  abstract_tree.txt  chunks.json  demo.py  main.py  pyproject.toml  requirement.txt
backend/: auth.py  database.py  main.py  model.py  pyproject.toml
frontend/codeExplainer/: .env  index.html  package-lock.json  package.json
frontend/codeExplainer/src/: App.jsx  main.jsx
frontend/codeExplainer/src/component/: AuthPage.jsx  Chatbox.jsx
pipline/: .env  chunks.json  main.py  pyproject.toml  results.json
pipline/src/: repoAbstraction.py
pipline/src/RAG/: embedding.py  retrival.py
pipline/vector_store/: chroma.sqlite3
src/: abstraction.py  chuking.py  repoAbstraction.py
src/RAG/: embedding.py
vector_store/: chroma.sqlite3
