[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "google-auth>=2.55.0",
    "passlib[bcrypt]>=1.7.4",
    "psycopg2-binary>=2.9.12",
    "pwdlib[argon2]>=0.3.0",
    "pyjwt>=2.13.0",
    "sqlmodel>=0.0.38",
]
