[project]
name = "coderag"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "chromadb>=1.5.9",
    "fastapi>=0.136.3",
    "gitpython>=3.1.50",
    "langchain>=1.3.9",
    "langchain-community>=0.4.2",
    "langchain-core>=1.4.7",
    "langchain-groq>=1.1.3",
    "langgraph>=1.2.5",
    "python-dotenv>=1.2.2",
    "requests>=2.34.2",
    "tree-sitter>=0.25.2",
    "tree-sitter-python>=0.25.0",
    "uvicorn>=0.49.0",
]

[tool.uv.workspace]
members = [
    "backend",
]
